--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,14 @@
-<html>
-  <head>
-    <title></title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body></body>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+</head>
+<body>
+  
+  <script src="js/vue.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/main-script.js"></script>
+</body>
 </html>
