ganti nama main-script jadi main

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,6 @@
   
   <script src="js/vue.js"></script>
   <script src="js/util.js"></script>
-  <script src="js/main-script.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
