Habis ini, bukan yang tadi

--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 		<label for="sub-keyword">
 			<h2>Pencarian untuk subtitle dari </h2>
 			<label for="vid-link"><h2>video: </h2></label>
-			<input type="text" name="vid-link" id="vid-link" v-model="vidLinkInput" @focus="setToVidLinkInput" @blur="resetToTitleOrURL">
+			<input type="text" name="vid-link" id="vid-link" v-model="vidLinkInput" kulprit @focus="setToVidLinkInput" @blur="resetToTitleOrURL">
 			<button @click='clearAll'>bersihkan</button>
 		</label>
 		<label for="sub-keyword">Keyword</label>
