--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,7 @@
 		<br>
 		<div class="input-group">
 			<input type="text" name="sub-keyword" id="sub-keyword" ref="subKeyword" v-model="subKeyword" @input="clearResult" class="form-control"
-			placeholder="Masukkan link video...">
+			placeholder="Masukkan keyword yang akan dicari...">
 			<div class="input-group-append">
 				<button @click='clearKeyword' class='clear'>x</button>
 			</div>
