--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
 	</script>
 	<!-- layouting -->
 	<!-- header -->
-	<div id="app" class="container">
+	<main id="app" class="container">
 		<label for="sub-keyword" class="sub-keyword-label text-uppercase">
 			<h2>Pencarian untuk subtitle dari 
 				<label for="vid-link">
@@ -102,7 +102,7 @@
 			>Loading...</p>
 		</div>
 
-	</div>
+	</main>
 	<script src="js/vue.js"></script>
 	<script src="js/util.js"></script>
 	<script src="js/main.js"></script>
